# linkUp

./: .env.dev  LICENSE-DOCS.md  docker-compose.prod.yml  docker-compose.yml
client/: package.json
client/public/: index.html
client/src/: App.tsx  fonts.css  index.css  index.tsx
client/src/api/fragments/: index.ts
client/src/api/mutations/: index.ts
client/src/components/Forms/: index.tsx
client/src/components/Forms/AuthForms/: LoginForm.tsx  PasswordResetRequestForm.tsx  RegisterForm.tsx
client/src/components/Modals/: index.tsx
client/src/components/Modals/AuthModals/: AuthModal.tsx
client/src/components/Navbar/: index.tsx
client/src/components/UI/Buttons/: ColorThemeSwitchButton.tsx  RootButton.tsx
client/src/components/UI/LanguageSelector/: index.tsx
client/src/components/UI/Loaders/: Loader.tsx
client/src/components/UI/Logo/: LinkUpLogo.tsx
client/src/languages/: index.ts
client/src/pages/Auth/: ConfirmEmail.tsx  index.tsx
client/src/pages/Messages/: AccountConfirmationEmailSent.tsx
client/src/router/: index.tsx
client/src/themes/: index.ts
config/nginx/: nginx.conf
server/: Dockerfile  pyproject.toml
server/accounts/: forms.py  models.py  mutations.py  schema.py  utils.py
server/server/: middleware.py  schema.py  urls.py
server/server/locale/en/LC_MESSAGES/: django.mo  django.po
server/server/locale/ru/LC_MESSAGES/: django.mo  django.po
server/server/locale/uk/LC_MESSAGES/: django.mo  django.po
server/server/settings/: base.py  prod.py
